--- a/Felipe_webpage_style.css
+++ b/Felipe_webpage_style.css
@@ -28,7 +28,7 @@
     text-align:center;
     padding: 10px;
     border: 3px solid #000000;
-    overflow: auto;
+    overflow: hidden;
 }
 .div2 {
     margin:0 auto;
