update style_profile_Felipe.css changing background image size on 'hobbies' page

--- a/style_profile_Felipe.css
+++ b/style_profile_Felipe.css
@@ -40,7 +40,7 @@ html,
 }
 
 .body-hobbies {
-    background-image: url('https://i.imgur.com/zwotNGx.png');
+    background-image: url('https://i.imgur.com/zwotNGx.png?2');
     height:100%;
     width:100%;
     background-repeat: no-repeat;
