--- a/style_profile_Felipe.css
+++ b/style_profile_Felipe.css
@@ -71,7 +71,7 @@ nav, p {
 .box-transp-01 {
     background: rgba(0, 0, 0, 0.65);
     border-radius: 25px;
-    width: 700px;
+    max-width: 700px;
     margin: 0 auto;
 }
 
