--- a/style_profile_Felipe.css
+++ b/style_profile_Felipe.css
@@ -48,6 +48,13 @@ html,
     background-position: center; 
 }
 
+.body-portfolio {
+  background-image: url('https://i.imgur.com/jy6k1X3.png?1');
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  background-position: center; 
+}
+
 body {
   display: -ms-flexbox;
   display: flex;
