--- a/style_profile_Felipe.css
+++ b/style_profile_Felipe.css
@@ -141,7 +141,7 @@ nav, p {
 .nav-masthead .nav-link {
   padding: .25rem 0;
   font-weight: 700;
-  color: rgba(255, 255, 255, .5);
+  color: rgba(160, 160, 160, 0.521);
   background-color: transparent;
   border-bottom: .25rem solid transparent;
 }
