--- a/style_profile_Felipe.css
+++ b/style_profile_Felipe.css
@@ -49,7 +49,7 @@ html,
 }
 
 .body-portfolio {
-  background-image: url('https://i.imgur.com/qNpEZzX.jpg?2');
+  background-image: url('https://i.imgur.com/jdmZcgw.jpg?2');
   height: 100%;
   width: 100%;
   background-repeat: no-repeat;
