--- a/style_profile_Felipe.css
+++ b/style_profile_Felipe.css
@@ -95,6 +95,7 @@ nav, p {
   background: rgba(0, 0, 0, 0.41);
   border-radius: 35px;
   padding: 0px 20px;
+  max-width: 600px;
   margin: 0 auto;
   overflow: auto;
 }
