--- a/style_profile_Felipe.css
+++ b/style_profile_Felipe.css
@@ -147,7 +147,7 @@ nav, p {
   margin-bottom: 0;
 }
 
-.nav-masthead .nav-link {
+.nav-masthead .nav-link, .nav-masthead .dropbtn {
   padding: .25rem 0;
   font-weight: 700;
   color: rgba(216, 216, 216, 0.473);
@@ -156,11 +156,13 @@ nav, p {
 }
 
 .nav-masthead .nav-link:hover,
-.nav-masthead .nav-link:focus {
+.nav-masthead .nav-link:focus,  
+.nav-masthead .dropbtn:hover,
+.nav-masthead .dropbtn:focus{
   border-bottom-color: rgba(255, 255, 255, .25);
 }
 
-.nav-masthead .nav-link + .nav-link {
+.nav-masthead .nav-link + .nav-link , .dropbtn {
   margin-left: 1rem;
 }
 
@@ -177,6 +179,46 @@ nav, p {
     float: right;
   }
 }
+
+/*
+ * Dropdown Button 
+ */
+
+.dropbtn {
+  border: none;
+  cursor: pointer;
+  text-shadow: 0 0.05rem 0.1rem rgba(0, 0, 0, 0.65);
+}
+
+/* Position of dropdown content */
+.dropdown {
+    position: relative;
+    display: inline-block;
+}
+
+/* Dropdown Content (Hidden by Default) */
+.dropdown-content {
+  display: none;
+  position: absolute;
+  background-color: rgba(0, 0, 0, 0.45);
+  border-radius: 15px;
+  min-width: 10em;
+  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+  z-index: 1;
+}
+
+/* Links inside the dropdown */
+.dropdown-content a {
+  color: black;
+  padding: 0px 14px;
+  float: center;
+  text-decoration: none;
+  display: block;
+}
+
+
+/* Show the dropdown menu */
+.show {display:block;}
 
 
 /*
