--- a/style_profile_Felipe.css
+++ b/style_profile_Felipe.css
@@ -77,21 +77,21 @@ nav, p {
     font-family: 'KoHo', sans-serif;
 }
 
-.box-transp-01 {
+.box-transp-intro, .box-transp-portfolio {
     background: rgba(0, 0, 0, 0.65);
     border-radius: 25px;
     max-width: 700px;
     margin: 0 auto;
 }
 
-.box-transp-02 {
+.box-transp-hobbies {
     background: rgba(0, 0, 0, 0.65);
     border-radius: 25px;
     margin: 0 auto;
     overflow: auto;
 }
 
-.box-transp-f {
+.box-transp-footer {
   background: rgba(0, 0, 0, 0.41);
   border-radius: 35px;
   padding: 0px 20px;
@@ -214,6 +214,10 @@ nav, p {
   float: center;
   text-decoration: none;
   display: block;
+}
+
+.dropdown-list {
+  list-style-type:circle;
 }
 
 
