--- a/style_profile_Felipe.css
+++ b/style_profile_Felipe.css
@@ -9,6 +9,19 @@ a:hover {
   color: #fff;
 }
 
+/* Lists: Under "Drop-Down button: Portfolio"= "dropbtn" */
+ul {
+  margin-left: -3.7px;
+}
+
+li {
+  padding-left: 0px;
+  margin-left: -2.1px;
+}
+
+.dropdown-list {
+  list-style-type:circle;
+}
 
 /*
  * Base structure
@@ -215,11 +228,6 @@ nav, p {
   text-decoration: none;
   display: block;
 }
-
-.dropdown-list {
-  list-style-type:circle;
-}
-
 
 /* Show the dropdown menu */
 .show {display:block;}
