--- a/style_profile_Felipe.css
+++ b/style_profile_Felipe.css
@@ -78,11 +78,12 @@ body {
   box-shadow: inset 0 0 5rem rgba(0, 0, 0, 0.65);
 }
 
+/*Text Modifiers and underline styles*/
 h1 {
     font-family: 'Ubuntu', sans-serif;
 }
 
-h3 {
+h3, h4 {
     font-family: 'Nanum Gothic', sans-serif;
 }
 
@@ -90,6 +91,8 @@ nav, p {
     font-family: 'KoHo', sans-serif;
 }
 
+
+/*Transparent boxes*/
 .box-transp-intro, .box-transp-portfolio {
     background: rgba(0, 0, 0, 0.65);
     border-radius: 25px;
@@ -113,6 +116,7 @@ nav, p {
   overflow: auto;
 }
 
+/*Image Modifiers */
 .profile-pic {
     margin:0 auto;
     border-radius: 50%;
@@ -125,11 +129,46 @@ nav, p {
 .gorge, .skyrim {
     float: center;
     border-radius: 15px;
+    height: 95%;
+    width: 95%;
     padding:1px;
     border:1px solid #0d0e0d;
     background-color:rgb(100, 163, 137);
 }
 
+.zagster-img {
+  height: 59.2%;
+  width: 59.2%;
+  border-radius: 50px;
+  margin: 0 auto;
+  padding: 1px;
+  border: 1px solid #0d0e0d;
+  background-color: rgb(126, 159, 165);
+}
+
+/* figures and figure captions */
+
+.zagster-fig {
+  display: flex;
+  flex-flow: column;
+  margin: 0;
+  padding: 5px;
+  border-radius: 50px;
+}
+
+figcaption {
+  padding: 3px;
+  text-align: center;
+  font-size: 12.9px;
+}
+
+.fig-caption-zag {
+  font-style: italic;
+  font-size: 12.6px
+}
+
+
+/* Column Modifier. Location:"hobbies.html"*/
 .column {
     text-align:center;
     column-count: 2;
@@ -147,7 +186,6 @@ nav, p {
 .cover-container {
   max-width: 65em;
 }
-
 
 /*
  * Header
